src/index.css
/* ... */
button {
  font-family: myFont;
}

a {
  text-decoration: none;
}

.homeMain {
  width: 100%;
}

img {
  width: 180px;
}

/* --Top Slider */

.mainSlider {
  width: 100%;
  background-color: rgb(23, 22, 21);
  display: flex;
  justify-content: center;
}

.sliderContainer {
  max-width: 1050px;
  width: 100%;
  height: 36px;
  color: #fff;
  position: relative;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: space-around;
}

.slider {
  display: flex;
  transition: transform 0.5s ease-out;
  width: calc(100% * 3);
}

.slide {
  min-width: 100%;
  box-sizing: border-box;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 13px;
  text-align: center;
  letter-spacing: 0.78px;
  line-height: 16.25px;
}

.arrow {
  width: 30px;
}

.prevBtn,
.nextBtn {
  background: rgb(23, 22, 21);
  border: none;
  cursor: pointer;
  z-index: 1;
  padding: 0 10px;
  opacity: 1;
}

.prevBtn:hover,
.nextBtn:hover {
  opacity: 1;
}

/* --Navbar  */

.mainNavbar {
  transition: top 0.3s ease-in-out;
  background-color: transparent;
  width: 100%;
  position: relative;
  top: 20;
  left: 0;
  border-bottom: 1.5px solid rgb(210, 213, 217);
  z-index: 1000;
}

/* Only for Home Component Navbar Color TransParent to White */
.mainHover {
  position: absolute;
  overflow: hidden;
  border-bottom: 1px solid transparent;
  background-color: #0000000f;
}

.mainHover::before {
  content: "";
  position: absolute;
  top: -100%;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #fff;
  transform: scaleY(0);
  transition: transform 0.5s ease;
  z-index: 0;
}

.mainHover:hover::before {
  transform: scaleY(1);
}

.mainHover li a {
  color: #fff;
  position: relative;
  z-index: 1;
  transition: color 0.5s ease;
}

.mainHover:hover li a {
  color: rgb(40, 40, 40);
}

.mainHover .navIcon,
.mainHover .logo,
.mainHover .form,
.mainHover .sideBarIcon,
.mainHover .formLower {
  position: relative;
  filter: invert(100%) brightness(200%);
  transition: filter 0.3s ease;
  z-index: 1;
}

.mainHover:hover .navIcon,
.mainHover:hover .logo,
.mainHover:hover .form,
.mainHover:hover .sideBarIcon,
.mainHover:hover .formLower {
  filter: none;
}
/*  */

/* for Scrolling ScrollBar color adjust */
/* for other things i Use - sidebarOpenHover - directly*/
.liElements li a {
  color: #000000;
}
/*  */

/* -Top Navbar  */
.topNav {
  position: relative;
  padding-block: 5px;
  padding-bottom: 7px;
  max-width: 1100px;
  margin: 0 auto;
  display: flex;
  justify-content: center;
  align-items: center;
  padding-inline: 50px;
  padding-top: 10px;
}

/* Input Field of Navbar */
.form button {
  border: none;
  background: none;
}

.form {
  --timing: 0.3s;
  --width-of-input: 188px;
  --height-of-input: 30px;
  --border-height: 2px;
  --input-bg: #fff;
  --border-radius: 1px;
  --after-border-radius: 1px;
  position: relative;
  width: var(--width-of-input);
  height: var(--height-of-input);
  display: flex;
  align-items: center;
  padding-inline: 0.5em;
  border-radius: var(--border-radius);
  transition: border-radius 0.5s ease;
  background: transparent;
  border-bottom: 1px solid #000;
}

.input {
  font-family: myFont;
  letter-spacing: 0.63px;
  font-size: 12.83px;
  font-weight: 400;
  font-style: normal;
  background-color: transparent;
  width: 100%;
  height: 100%;
  padding-inline: 0.5em;
  border: none;
  opacity: 0.7;
}

.form:before {
  content: "";
  position: absolute;
  background: var(--border-color);
  transform: scaleX(0);
  transform-origin: center;
  width: 100%;
  height: var(--border-height);
  left: 0;
  bottom: 0;
  border-radius: 1px;
  transition: transform var(--timing) ease;
}

.form:focus-within {
  border-radius: var(--after-border-radius);
}

input:focus {
  outline: none;
}

.form:focus-within:before {
  transform: scale(1);
}

.reset {
  border: none;
  background: none;
  opacity: 0;
  visibility: hidden;
}

input:not(:placeholder-shown) ~ .reset {
  opacity: 1;
  visibility: visible;
}

.form svg {
  width: 17px;
  margin-top: 3px;
}
/* --- */

.searchBar {
  display: flex;
  align-items: center;
  gap: 20px;
  height: 100%;
  width: 30%;
}

.brandLogo {
  height: 100%;
  width: 40%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.logo {
  width: 143.325px;
  height: 20px;
  padding: 3px;
}

.Nav_icons {
  height: 31px;
  width: 30%;
  display: flex;
  justify-content: right;
  align-items: center;
}

.navIcon {
  height: 20px;
  width: 22px;
  padding-left: 28px;
}

.navIcon:hover {
  opacity: 0.6;
  scale: 1.05;
  transition: 0.2s ease-in-out;
}

/*  */

/* -Bottom Navbar */

.bottom {
  margin: 0 auto;
  max-width: 1100px;
  padding-top: 9px;
  padding-inline: 50px;
  padding-bottom: 7px;
}

ul {
  list-style: none;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  align-items: center;
  gap: 28px;
}

li {
  font-size: 11.59px;
  text-transform: uppercase;
  list-style: none;
  font-weight: 550;
  letter-spacing: 2.4px;
  line-height: 21.6px;
}

li a {
  text-decoration: none;
  color: rgb(40, 40, 40);
  position: relative;
  padding-bottom: 5px;
}

li a::after {
  content: "";
  position: absolute;
  left: 0;
  bottom: 0;
  height: 0.5px;
  width: 0;
  background-color: rgba(40, 40, 40, 0.423);
  transition: width 0.15s ease-in-out;
}

li a:hover::after,
.navActive::after {
  width: 100%;
}

li a:hover {
  color: rgba(40, 40, 40, 0.749);
}

/* Home */

.topBanner {
  position: relative;
}

.BannerImage {
  width: 100%;
  display: block;
  margin-bottom: 0;
  padding-bottom: 0;
  transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
}

.roundBtn {
  bottom: 40px;
  width: 8px;
  height: 8px;
  background-color: rgb(189, 186, 186);
  border: none;
  margin-right: 10px;
  border-radius: 50%;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.roundBtn.active {
  background-color: #fff;
}
/* ... */

